--- a/main_app/templates/main_app/feeding_form.html
+++ b/main_app/templates/main_app/feeding_form.html
@@ -1,25 +1,50 @@
-{% extends 'base.html' %} 
-{% load static %} 
-{% block head %}
-<link rel="stylesheet" href="{% static 'css/form.css' %}" />
-{% endblock %} 
+{% extends 'base.html' %}
+
 {% block content %}
+<h2>Dashboard</h2>
 
-<div class="page-header">
-    {% if feeding %}
-      <h1>Edit</h1>
-    {% else %}
-      <h1>Add a meal</h1>
-    {% endif %}
-  </div>
-  
+{% for feeding in feedings %}
+<div>
+    <h4>{{ feeding.meal }} on {{ feeding.date }}</h4>
+    <ul>
+        {% for food_item in feeding.food_item.all %}
+        <li>{{ food_item.name }} - {{ food_item.calories }} kcal</li>
+        {% endfor %}
+    </ul>
+</div>
+{% endfor %}
 
-<form action="" method="post" class="form-container">
-  {% csrf_token %}
-  <table>
-    {{ form.as_table }}
-  </table>
-  <button type="submit" class="btn submit">Submit!</button>
+<form method="post">
+    {% csrf_token %}
+    {{ feeding_form.as_p }}
+
+    <h3>Food Items</h3>
+    <div id="formset-container">
+        {{ food_item_formset.management_form }}
+        {% for form in food_item_formset %}
+        <div class="formset-form">
+            {{ form.as_p }}
+        </div>
+        {% endfor %}
+    </div>
+
+    <button type="button" onclick="addForm()">Add Another Food Item</button>
+    <button type="submit">Save</button>
 </form>
 
+<script>
+    function addForm() {
+        const formsetContainer = document.getElementById('formset-container');
+        const totalForms = document.getElementById('id_form-TOTAL_FORMS');
+        const formIndex = totalForms.value;
+
+        const newForm = document.createElement('div');
+        newForm.classList.add('formset-form');
+        newForm.innerHTML = formsetContainer.children[1].innerHTML.replace(/__prefix__/g, formIndex);
+
+        formsetContainer.appendChild(newForm);
+
+        totalForms.value = parseInt(totalForms.value) + 1;
+    }
+</script>
 {% endblock %}
