--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -21,6 +21,7 @@
             <nav>
                 <ul>
                     {% if user.is_authenticated %}
+                    <li><a href="{% url 'dashboard' %}">Dashboard</a></li>
                     <li>
                         <form id="logout-form" method="post" action="{% url 'logout' %}">
                             {% csrf_token %}
