--- a/main_app/templates/main_app/feeding_form.html
+++ b/main_app/templates/main_app/feeding_form.html
@@ -6,12 +6,14 @@
 <form method="post" id="feeding-form">
     {% csrf_token %}
 
+    <!-- Render Feeding Form -->
     <div>
         {{ feeding_form.non_field_errors }}
         {{ feeding_form.as_p }}
     </div>
 
     <h3>Food Items</h3>
+    
     {{ food_item_formset.management_form }}
     <div id="food-items">
         {% for form in food_item_formset %}
@@ -19,7 +21,6 @@
             {{ form.as_p }}
 
             {% if form.instance.pk %}
-            
             {% else %}
             <button type="button" class="remove-food-item">Remove</button>
             {% endif %}
