--- a/main_app/templates/profile/meal_detail.html
+++ b/main_app/templates/profile/meal_detail.html
@@ -14,6 +14,7 @@
 <table>
     <thead>
         <tr>
+            <th></th>
             <th>Name</th>
             <th>Calories</th>
             <th>Fats</th>
@@ -24,6 +25,13 @@
     <tbody>
         {% for item in feeding.food_item.all %}
         <tr>
+            <td>
+                {% if item.photo_url %}
+                    <img src="{{ item.photo_url }}" alt="{{ item.name }}" class="food-item-image">
+                {% else %}
+                    No Image Available
+                {% endif %}
+            </td>
             <td>{{ item.name }}</td>
             <td>{{ item.calories }}</td>
             <td>{{ item.fats }}</td>
@@ -32,9 +40,22 @@
         </tr>
         {% empty %}
         <tr>
-            <td colspan="5">No food items found.</td>
+            <td colspan="6">No food items found.</td>
         </tr>
         {% endfor %}
     </tbody>
 </table>
+
+<style>
+
+.food-item-image {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 5px; 
+    margin-right: 10px; 
+}
+
+</style>
+
 {% endblock %}
