--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -9,6 +9,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="{% static 'css/base.css' %}" />
+        <link rel="shortcut icon" type="image/png" href="{% static 'images/logo.png' %}" />
         <title>Daily Bread</title>
         {% block head %}
         {% endblock %}
@@ -16,16 +17,20 @@
 
     <body>
         <header>
-            <div class="header-logo-container">
-            </div>
             <nav>
+                <div class="header-logo-container">
+                    <a href="/dashboard/">
+                        <img src="{% static 'images/logo.png' %}" 
+                        alt="Daily Bread Logo" />
+                    </a>
+                </div>
                 <ul>
                     {% if user.is_authenticated %}
                     <li><a href="{% url 'dashboard' %}">Dashboard</a></li>
                     <li>
                         <form id="logout-form" method="post" action="{% url 'logout' %}">
                             {% csrf_token %}
-                            <button type="submit">Log out</button>
+                            <button id="logout-btn" type="submit">Log out</button>
                         </form>
                     </li>
                     {% else %}
